--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <section id="container">
-    <img id="img-1" src="/images/drawers.jpg" alt="drawer">
+    <img id="img-1" src="images/drawers.jpg" alt="drawer">
     <div id="text">
       <h1>
         Shift the overall look and feel by
