--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
           <p id="position">SHARE</p>
           <ul>
             <li class="social-media-icon">
-              <a href=""><img src="/images/icon-facebook.svg" alt="" /></a>
+              <a href=""><img src="images/icon-facebook.svg" alt="" /></a>
             </li>
             <li class="social-media-icon">
-              <a href=""><img src="/images/icon-pinterest.svg" alt="" /></a>
+              <a href=""><img src="images/icon-pinterest.svg" alt="" /></a>
             </li>
             <li class="social-media-icon">
-              <a href=""><img src="/images/icon-twitter.svg" alt="" /></a>
+              <a href=""><img src="images/icon-twitter.svg" alt="" /></a>
             </li>
           </ul>
         </div> 
